# Video-Quality-Assessment-Pipeline

./: README.md  build_dataset.py  extract_features.py  main.py  predict_video.py  pyproject.toml  scaler.pkl  train_model.py  y.npy
app/: api.py  main.py
features/: orig_10044664624_540_5s.mp4.npy  orig_10045053595_540_5s.mp4.npy  orig_10062498203_540_5s.mp4.npy  orig_10084107653_540_5s.mp4.npy  orig_10106449093_540_5s.mp4.npy  orig_10158770453_540_5s.mp4.npy  orig_10181314856_540_5s.mp4.npy  orig_10320058616_540_5s.mp4.npy  orig_10564593194_540_5s.mp4.npy  orig_10582782586_540_5s.mp4.npy  orig_10583592443_540_5s.mp4.npy  orig_10650207475_540_5s.mp4.npy  orig_10674350206_540_5s.mp4.npy  orig_10681023525_540_5s.mp4.npy  orig_10705034506_540_5s.mp4.npy  orig_10867101476_540_5s.mp4.npy  orig_10932852506_540_5s.mp4.npy  orig_10959956576_540_5s.mp4.npy  orig_11009028296_540_5s.mp4.npy  orig_11020851733_540_5s.mp4.npy  orig_11053897243_540_5s.mp4.npy  orig_11070232293_540_5s.mp4.npy  orig_11145664684_540_5s.mp4.npy  orig_11163815184_540_5s.mp4.npy  orig_11193003955_540_5s.mp4.npy  orig_11241102906_540_5s.mp4.npy  orig_11243731843_540_5s.mp4.npy  orig_11272718786_540_5s.mp4.npy  orig_11277693604_540_5s.mp4.npy  orig_11298519723_540_5s.mp4.npy  orig_11360435856_540_5s.mp4.npy  orig_11378375474_540_5s.mp4.npy  orig_11404825244_540_5s.mp4.npy  orig_11536521866_540_5s.mp4.npy  orig_11691633566_540_5s.mp4.npy  orig_11705285984_540_5s.mp4.npy  orig_11714293566_540_5s.mp4.npy  orig_11780799405_540_5s.mp4.npy  orig_11798466663_540_5s.mp4.npy  orig_11848691003_540_5s.mp4.npy  (+641 more)
(+907 files in other folders)
